# agentic_job_scraping_public

./: .dockerignore  .gitignore  CHANGELOG.md  DESIGN_SPEC.md  README.md  public_export.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: public-export-verify.yml
docker/sandbox/: Dockerfile  requirements.txt
docs/: 01-architecture.md  02-adk-job-listing-scout.md  03-public-export.md  04-release-changelog-sync.md  index.md
plans/: index.md  reports.md
plans/active/: 01-agentic-scraper-implementation.md  02-rlm-page-workspace-scraper.md  03-sandbox-token-reporting.md  04-skill-script-sandbox-terminal.md  05-age18-gold-tool-trajectory.md  05-age38-linear-release-changelog-sync.md  06-age26-eval-unit-tests.md  07-age26-normalized-scoring-implementation.md  07-age46-adk-plugin-module-refactor.md  08-age26-adk-db-trace-fixtures.md
plans/notes/: 01-itviec-manual-extraction-playbook.md  02-cross-framework-skill-policy.md  index.md
reports/: index.md
scripts/: adk_eval_dashboard.py  adk_eval_dashboard.template.html  adk_token_dashboard.py  adk_token_dashboard.template.html  linear_release_ledger.py  release_notes.py  sync_public.py  update_adk_model_pricing.py  utils.py
seeds/: demo_sources.json  sources.template.json
src/: __init__.py  job_scraper_core.evalset.json
tests/: test_adk_agent.py  test_adk_eval_dashboard.py  test_adk_observability_custom_dashboard.py  test_adk_observability_entrypoint.py  test_adk_plugins.py  test_adk_token_dashboard.py  test_adk_tools.py  test_age10_adk_eval.py  test_ci_workflows.py  test_context_cli.py  test_continuation_eval_dashboard.py  test_continuation_eval_scoring.py  test_dependabot_changelog.py  test_eval_assets.py  test_export_continuation_eval_adk_web_sessions.py  test_extraction_compare.py  test_itviec_expected_fixture.py  test_linear_release_ledger.py  test_pipeline.py  test_public_export.py  test_release_notes.py  test_runtime_payload.py  test_sandbox_agent.py  test_sandbox_fixture.py  test_sandbox_protocol.py  test_sandbox_terminal_runtime.py  test_score_continuation_eval.py  test_sources.py
(+139 files in other folders)
