[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper"
version = "0.1.0"
description = "Seed-driven AI/ML job scraper with SQLite storage and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "google-adk[eval]>=2.3,<2.4",
  "litellm>=1.84,<2",
  "loguru>=0.7,<1",
  "docker>=7.2.0,<8",
  "openai-agents>=0.18.1,<0.19",
  "pydantic>=2,<3",
  "pytest>=9.0.3,<10",
  "rich>=13.7,<14",
  "scrapling[fetchers]>=0.4.9,<0.5",
  "starlette>=1.3.1,<2",
  "streamlit>=1.59.1,<2",
  "typer>=0.26.8,<1",
]

[project.scripts]
job-scraper = "job_scraper.cli:main"
job-scraper-adk-dashboard = "job_scraper.adk_observability:main"
job-scraper-public-export = "job_scraper.public_export:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "docker: requires Docker runtime",
  "adk_eval: requires ADK eval/model runtime",
]
